--- a/app/views/meta/prorogation_and_dissolution.html.erb
+++ b/app/views/meta/prorogation_and_dissolution.html.erb
@@ -47,28 +47,21 @@
 <ol>
 	<%= content_tag( 'li', "Find the current session. We do this by running #{content_tag( 'code', 'select * from sessions where end_date is null;' )}.".html_safe ) %>
 	<%= content_tag( 'li', "Add an end date to the current session. We do this by running #{content_tag( 'code', "update sessions set end_date='DATE' where id = ID;" )} where DATE is the date of prorogation in YYYY-MM-DD format and ID is the ID of current session.".html_safe ) %>
-	<%= content_tag( 'li', "Find the ID of the current parliament. We do this by running #{content_tag( 'code', 'select * from parliament_periods order by start_date desc limit 1;')}.".html_safe ) %>
-	
-	
-	<%= content_tag( 'li', "Create the new prorogation. We do this by running #{content_tag( 'code', "insert into prorogation_periods (number, start_date, end_date, parliament_period_id) values (NUMBER, 'START_DATE', 'END_DATE', PARLIAMENT_ID);" )} where NUMBER is the number of the session in the parliament, START_DATE is the day following the prorogation date, END_DATE is either the day before the start date of the next session if the prorogation is followed by a session or the date of dissolution if the prorogation is followed by dissolution and PARLIAMENT_ID is the ID returned from the previous query.".html_safe ) %>
-	
-	
-	
-	
-	<%= content_tag( 'li', "Run a rake task to populate prorogation days from the prorogation period. Note that this script does not exist yet and will need to be written when the next prorogation is announced'" ) %>
+	<%= content_tag( 'li', "Find the ID of the current parliament. We do this by running #{content_tag( 'code', 'select * from parliament_periods order by start_date desc limit 1;')}.".html_safe ) %><%= content_tag( 'li', "Create the new prorogation. We do this by running #{content_tag( 'code', "insert into prorogation_periods (number, start_date, end_date, parliament_period_id) values (NUMBER, 'START_DATE', 'END_DATE', PARLIAMENT_ID);" )} where NUMBER is the number of the session in the parliament, START_DATE is the day following the prorogation date, END_DATE is either the day before the start date of the next session if the prorogation is followed by a session or the date of dissolution if the prorogation is followed by dissolution and PARLIAMENT_ID is the ID returned from the previous query.".html_safe ) %>
+	<%= content_tag( 'li', "Run a rake task to populate prorogation days from the prorogation period. Note that this script does not exist yet and will need to be written when the next prorogation is announced." ) %>
 </ol>
 
 <%= content_tag( 'h2', 'What to do upon the announcement of dissolution' ) %>
 
-<%= content_tag( 'p', "If the dissolution is immediately preceded by a short prorogation period, we need to create the prorogation period as above. If the dissolution period is not immediately preceded by a short prorogation period, we need to set an end date for the current session following steps 1 and 2 above." ) %>
+<%= content_tag( 'p', "If the dissolution is immediately preceded by a short prorogation period, we need to set an end date for the current session and create the prorogation period, following steps 1 to 5 above. If the dissolution period is not immediately preceded by a short prorogation period, we need to set an end date for the current session following steps 1 and 2 above." ) %>
 
 <%= content_tag( 'p', " We then need to create a new dissolution period and a new parliament period." ) %>
 
 <%= content_tag( 'p', " The steps are:" ) %>
 
 <ol>
-	<%= content_tag( 'li', "Find the number of the current parliament. Do this by running 'select * from parliament_periods order by start_date desc limit 1;'" ) %>
-	<%= content_tag( 'li', "Create a new dissolution period. Do this by running: 'insert into dissolution_periods(number, start_date, end_date) values (NUMBER, 'START_DATE', 'END_DATE');' where NUMBER is the number of the current parliament, START DATE is the day following the dissolution date as named in the Dissolution Proclamation and END_DATE is the day before Parliament returns from dissolution as named in the Dissolution Proclamation" ) %>
+	<%= content_tag( 'li', "Find the number of the current parliament. Do this by running #{content_tag( 'code','select * from parliament_periods order by start_date desc limit 1;' )}.".html_safe ) %>
+	<%= content_tag( 'li', "Create a new dissolution period. Do this by running: #{content_tag( 'code', 'insert into dissolution_periods(number, start_date, end_date) values (NUMBER, 'START_DATE', 'END_DATE');')} where NUMBER is the number of the current parliament, START DATE is the day following the dissolution date as named in the dissolution proclamation and END_DATE is the day before Parliament returns from dissolution as named in the dissolution proclamation." ) %>
 	<%= content_tag( 'li', "Run a rake task to populate dissolution days from the dissolution period. Note that this script does not exist yet and will need to be written when the next dissolution is announced" ) %>
 </ol>
 
