--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -1,14 +1,14 @@
 <form action="calculator/calculate" method="GET">
 
 <fieldset>
-<legend>Choose a procedure</legend>
+<legend>Period to calculate</legend>
 
 <%= render :partial => 'calculator/procedure', :collection => @procedures %>
 
 </fieldset>
 
 <p>
-<%= content_tag( 'label', 'Set a scrutiny start date (DD-MM-YYYY)', :for => 'start-date' ) %>
+<%= content_tag( 'label', 'Scrutiny start date (DD-MM-YYYY)', :for => 'start-date' ) %>
 <br><br>
 <input type="date" name="start-date" id="start-date">
 
@@ -16,7 +16,7 @@
 
 
 <p>
-<%= content_tag( 'label', 'How many days to count', :for => 'day-count' ) %>
+<%= content_tag( 'label', 'Number of days to count', :for => 'day-count' ) %>
 <br><br>
 <input type="number" name="day-count" id="day-count">
 </p>
