--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -1,6 +1,7 @@
 <ol>
 	<%= content_tag( 'li', link_to( 'Calendar sync documentation', meta_calendar_sync_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Prorogation and dissolution', meta_prorogation_dissolution_url ) ) %>
-	<%= content_tag( 'li', link_to( 'Database schema', meta_schema_url ) ) %>
-	<%= content_tag( 'li', link_to( 'The code', meta_code_url ) ) %>
+	<%= content_tag( 'li', link_to( 'The database schema', meta_schema_url ) ) %>
+	<%= content_tag( 'li', link_to( 'The code', 'https://github.com/fantasticlife/egg-timer' ) ) %>
+	<%= content_tag( 'li', link_to( 'The comments', meta_comment_url ) ) %>
 </ol>
