--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -1,7 +1,12 @@
-<ol>
-	<%= content_tag( 'li', link_to( 'Calendar sync documentation', meta_calendar_sync_url ) ) %>
-	<%= content_tag( 'li', link_to( 'Prorogation and dissolution', meta_prorogation_dissolution_url ) ) %>
-	<%= content_tag( 'li', link_to( 'The database schema', meta_schema_url ) ) %>
-	<%= content_tag( 'li', link_to( 'The code', 'https://github.com/fantasticlife/egg-timer' ) ) %>
-	<%= content_tag( 'li', link_to( 'The comments', meta_comment_url ) ) %>
-</ol>
+<ul>
+
+<li><%= link_to( 'How the calendar uses the information you create', meta_calendar_sync_url ) %></li>
+
+<li><%= link_to( 'What to do at prorogation and dissolution', meta_prorogation_dissolution_url ) %></li>
+
+<li><%= link_to( 'Database schema [PNG]', meta_schema_url ) %></li>
+
+	<li><%= link_to( 'Source code: github.com/fantasticlife/egg-timer', 'https://github.com/fantasticlife/egg-timer' ) %></li>
+	
+	<li><%= link_to( 'Comments', meta_comment_url )  %></li>
+</ul>
