--- a/app/views/meta/comment.html.erb
+++ b/app/views/meta/comment.html.erb
@@ -4,4 +4,5 @@
 	<%= content_tag( 'li', link_to( 'Calculation for PNSIs (bicameral first to ten)', '/bicameral_first_to_ten.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for LROs, LOs, PBOs (bicameral parliamentary days)', '/bicameral_parliamentary_days.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for made affirmative SIs with both Houses sitting', '/bicameral_praying_days_both_houses_sitting.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for draft SIs and made affirmative SIs with either House sitting', '/bicameral_praying_days_either_house_sitting.rb.html' ) ) %>
 </ol>
