--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <header>
 <nav>
 <p>
-Parliament calendar &mdash; <a href="/">Calculate scrutiny period</a>
+<a href="/">Parliament calendar</a>
 </p>
 
 </nav>
