--- a/app/views/meta/comment.html.erb
+++ b/app/views/meta/comment.html.erb
@@ -7,4 +7,5 @@
 	<%= content_tag( 'li', link_to( 'Calculation for draft SIs and made affirmative SIs with either House sitting', '/bicameral_praying_days_either_house_sitting.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for treaty period B', '/commons_parliamentary_days.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', '/commons_praying_days.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for treaty period A', '/treaty_period_a.rb.html' ) ) %>
 </ul>
