--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -1,29 +1,33 @@
-<form action="calculator/calculate" method="GET">
+<% if @procedures.empty?%> 
+	<%= content_tag( 'p', 'The scrutiny period calculator is currently undergoing maintenance. We hope to have it back fairly soon.' ) %>
+<% else -%>
+	<form action="calculator/calculate" method="GET">
 
-<fieldset>
-<legend>Period to calculate</legend>
+	<fieldset>
+	<legend>Period to calculate</legend>
 
-<%= render :partial => 'calculator/procedure', :collection => @procedures %>
+	<%= render :partial => 'calculator/procedure', :collection => @procedures %>
 
-</fieldset>
+	</fieldset>
 
-<p>
-<%= content_tag( 'label', 'Scrutiny start date (DD-MM-YYYY)', :for => 'start-date' ) %>
-<br><br>
-<input type="date" name="start-date" id="start-date">
+	<p>
+	<%= content_tag( 'label', 'Scrutiny start date (DD-MM-YYYY)', :for => 'start-date' ) %>
+	<br><br>
+	<input type="date" name="start-date" id="start-date">
 
-</p>
+	</p>
 
 
-<p>
-<%= content_tag( 'label', 'Number of days to count', :for => 'day-count' ) %>
-<br><br>
-<input type="number" name="day-count" id="day-count">
-</p>
+	<p>
+	<%= content_tag( 'label', 'Number of days to count', :for => 'day-count' ) %>
+	<br><br>
+	<input type="number" name="day-count" id="day-count">
+	</p>
 
-<p>
+	<p>
 
-<!-- <label for="calculate">Calculate scrutiny period end date</label> -->
-<button type="submit" id="calculate">Calculate</button>
-</p>	
-</form>
+	<!-- <label for="calculate">Calculate scrutiny period end date</label> -->
+	<button type="submit" id="calculate">Calculate</button>
+	</p>	
+	</form>
+<% end -%>
