--- a/app/views/meta/comment.html.erb
+++ b/app/views/meta/comment.html.erb
@@ -1,11 +1,5 @@
 <ul>
 	<%= content_tag( 'li', link_to( 'Money patched date class', '/date.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Main calculator controller', '/calculator_controller.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for PNSIs (bicameral first to ten)', '/bicameral_first_to_ten.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for LROs, LOs, PBOs (bicameral parliamentary days)', '/bicameral_parliamentary_days.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for made affirmative SIs with both Houses sitting', '/bicameral_praying_days_both_houses_sitting.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for draft SIs and made affirmative SIs with either House sitting', '/bicameral_praying_days_either_house_sitting.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for treaty period B', '/commons_parliamentary_days.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', '/commons_praying_days.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for treaty period A', '/treaty_period_a.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for treaty periods A and B', '/treaty.rb.html' ) ) %>
 </ul>
