added pnsi calcuation comments

--- a/app/views/meta/comment.html.erb
+++ b/app/views/meta/comment.html.erb
@@ -1,5 +1,6 @@
 <ul>
 	<%= content_tag( 'li', link_to( 'Money patched date class', '/date.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Main calculator controller', '/calculator_controller.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', '/pnsi.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for treaty periods A and B', '/treaty.rb.html' ) ) %>
 </ul>
