added bicameral si either house sitting

--- a/app/views/meta/comment.html.erb
+++ b/app/views/meta/comment.html.erb
@@ -2,6 +2,7 @@
 	<%= content_tag( 'li', link_to( 'Money patched date class', '/date.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Main calculator controller', '/calculator_controller.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', '/commons_only_si.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for bicameral SIs with either House sitting', '/bicameral_si_either_house_sitting.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', '/pnsi.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for treaty periods A and B', '/treaty.rb.html' ) ) %>
 </ul>
