--- a/app/views/session/show.html.erb
+++ b/app/views/session/show.html.erb
@@ -1,9 +1,10 @@
 <%= content_tag( 'p', @session.dates) %>
 
-<%= content_tag( 'h2', 'Houses' ) %>
+<%= content_tag( 'h2', 'Months' ) %>
 <ol>
-	<%= render :partial => 'session_house/house', :collection => @houses %>
+	<%= render :partial => 'month', :collection => @session.month_range %>
 </ol>
+
 
 <%= content_tag( 'h2', 'Dates' ) %>
 <table>
@@ -17,6 +18,6 @@
 		</tr>
 	</thead>
 	<tbody>
-		<%= render :partial => 'date', :collection => @session.date_range %>
+		<!-- %= render :partial => 'date', :collection => @session.date_range % -->
 	</tbody>
 </table>
