make show and hide buttons differ more

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
             body {font-weight: bold;}
             body.development {border-bottom:4em solid pink;}
 			button {border:1pt solid #0076d1;}
+			button.procedure-toggle {width:6rem;}
+			button.Show {font-weight:bold;}
             </style>
 </head>
 <body class="<%= Rails.env %>">
