--- a/app/views/procedure/_procedure.html.erb
+++ b/app/views/procedure/_procedure.html.erb
@@ -1,5 +1,5 @@
 <div>
-<button style="width:6rem;"><%= link_to( procedure.status_label, procedure_flip_url( :procedure => procedure ) )  %>
+<button class="procedure-toggle <%= procedure.status_label %>"><%= link_to( procedure.status_label, procedure_flip_url( :procedure => procedure ) )  %>
 </button>
 
 <%= link_to( procedure.name, procedure_show_url( :procedure => procedure ) )  %></div>
