added note that days during dissolution / prorogation should be left blank

--- a/app/views/meta/calendar_sync.html.erb
+++ b/app/views/meta/calendar_sync.html.erb
@@ -26,6 +26,8 @@
 	
 	
 	<p>You can create <strong>a set of individual days as a recurring appointment</strong>: the application will mark single days.</p>
+	
+	<p>Days during periods of <strong>prorogation or dissolution should be left blank on the calendar</strong>. The Houses can only be adjourned during a session.</p>
 </section>
 
 <section>
