added reassignment of days to next session

--- a/app/views/meta/prorogation_and_dissolution.html.erb
+++ b/app/views/meta/prorogation_and_dissolution.html.erb
@@ -70,7 +70,7 @@
 
 <%= content_tag( 'h2', 'Reassign sitting and adjournment days to the correct session' ) %>
 <%= content_tag( 'p', "Sitting and adjournment days for today or in the future are assigned to the current session. This is because we do not know in advance the end date of the current session. On the announcement of a prorogation or dissolution, some some future days will need to be assigned to the following session." ) %>
-<%= content_tag( 'p', "Run a rake task to reassign sitting and adjournment days to the correct session. Note that this script does not exist yet and will need to be written when the next prorogation or dissolution is announced."" ) %>
+<%= content_tag( 'p', "Run a rake task to reassign sitting and adjournment days to the correct session. Note that this script does not exist yet and will need to be written when the next prorogation or dissolution is announced." ) %>
 
 <%= content_tag( 'h2', 'Pushing the data to Heroku' ) %>
 
