--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -1,7 +1,7 @@
 <% if @procedures.empty?%> 
 	<%= content_tag( 'p', 'The scrutiny period calculator is currently undergoing maintenance. We hope to have it back fairly soon.' ) %>
 <% else -%>
-	<form action="calculator/calculate" method="GET">
+	<form action="calculator/calculate" method="GET" id="calculator">
 
 	<fieldset>
 	<legend>Period to calculate</legend>
