tweaking calendar pages

--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,1 +1,13 @@
-<%= content_tag( 'p', 'Nothing to see here.' ) %>
+
+<p><a href="calendar/2021">2021</a></p>
+
+<p><a href="calendar/2020">2020</a></p>
+
+<p><a href="calendar/2019">2019</a></p>
+
+<p><a href="calendar/2018">2018</a></p>
+
+<p><a href="calendar/2017">2017</a></p>
+
+
+
