--- a/app/views/calendar/_date.html.erb
+++ b/app/views/calendar/_date.html.erb
@@ -1,8 +1,8 @@
 <tr>
-	<%= content_tag( 'td', date.strftime( '%e') ) %>
-	<%= content_tag( 'td', date.strftime( '%A') ) %>
-	<%= content_tag( 'td', date.commons_day_type ) %>
-	<%= content_tag( 'td', date.is_commons_scrutiny_day_label ) %>
-	<%= content_tag( 'td', date.lords_day_type ) %>
-	<%= content_tag( 'td', date.is_lords_scrutiny_day_label ) %>
+	<td style="float:right;"><%= date.strftime('%A')  %></td>
+	<td><%= date.strftime('%e').strip.to_i.ordinalize  %></td>
+	<td title="Commons day type"><%= date.commons_day_type  %></td>
+	<td title="Commons praying"><%= date.is_commons_scrutiny_day_label  %></td>
+	<td title="Lords day type"><%= date.lords_day_type  %></td>
+	<td title="Lords praying"><%= date.is_lords_scrutiny_day_label  %></td>
 </tr>
