updated bicameral both houses sitting from SI to instrument cos it also includes LROs, PBOs and Localisms

--- a/app/views/meta/comment.html.erb
+++ b/app/views/meta/comment.html.erb
@@ -1,7 +1,7 @@
 <ul>
 	<%= content_tag( 'li', link_to( 'Money patched date class', '/date.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Main calculator controller', '/calculator_controller.rb.html' ) ) %>
-	<%= content_tag( 'li', link_to( 'Calculation for bicameral SIs with both Houses sitting', '/bicameral_both_houses_sitting.rb.html' ) ) %>
+	<%= content_tag( 'li', link_to( 'Calculation for bicameral instruments with both Houses sitting', '/bicameral_both_houses_sitting.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for bicameral SIs with either House sitting', '/bicameral_si_either_house_sitting.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', '/commons_only_si.rb.html' ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for PNSIs', '/pnsi.rb.html' ) ) %>
