--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -8,5 +8,5 @@
 
 	<li><%= link_to( 'Source code: github.com/fantasticlife/egg-timer', 'https://github.com/fantasticlife/egg-timer' ) %></li>
 	
-	<li><%= link_to( 'Comments', meta_comment_url )  %></li>
+	<li><%= link_to( 'Code comments', meta_comment_url )  %></li>
 </ul>
