added setting and output of scrutiny start date

--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -18,6 +18,8 @@
 	
 	<li>Starting from <strong><%= @start_date.strftime( '%-d %B %Y') %></strong></li>
 	
+	<%= @scrutiny_start_date %>
+	
 	
 	
 	</ul>
