added start date type for display

--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -20,7 +20,7 @@
 	
 	<li>For a scrutiny period of <strong><%= @day_count %> days</strong></li>
 	
-	<li>Starting from <strong><%= @start_date.strftime( '%-d %B %Y') %></strong></li>
+	<li>Starting from <strong><%= @start_date.strftime( '%-d %B %Y') %></strong>  (<%= @start_date_type %>)</li>
 	
 	
 	
