--- a/app/views/calculator/calculate.html.erb
+++ b/app/views/calculator/calculate.html.erb
@@ -9,7 +9,7 @@
 	
 <p>The <u>anticipated</u> end date of the scrutiny period is:</p>
 
-	<strong><big><time><%= @end_date.strftime( '%A %-d %B %Y') %></time></big></strong>
+	<strong><big><time><%= @scrutiny_end_date.strftime( '%A %-d %B %Y') %></time></big></strong>
 	
 	
 	
