--- a/app/views/calculator/calculate.json.erb
+++ b/app/views/calculator/calculate.json.erb
@@ -3,7 +3,7 @@
 	"error": "<%= @error_message %>",
 <% else -%>
 	"anticipated_scrutiny_start_date": "<%= @scrutiny_start_date.strftime( '%Y-%m-%d' ) %>",
-	"anticipated_scrutiny_end_date": "<%= @end_date.strftime( '%Y-%m-%d' ) %>",
+	"anticipated_scrutiny_end_date": "<%= @scrutiny_end_date.strftime( '%Y-%m-%d' ) %>",
 	"procedure": "<%= @procedure.name %>",
 	"day_count": "<%= @day_count %>",
 	"start_date": "<%= @start_date.strftime( '%Y-%m-%d' ) %>"<% end -%>
