updated comments layout, form and response

--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -11,7 +11,7 @@
 	</fieldset>
 
 	<p>
-	<%= content_tag( 'label', 'Scrutiny start date (DD-MM-YYYY)', :for => 'start-date' ) %>
+	<%= content_tag( 'label', 'Scrutiny start date: DD-MM-YYYY', :for => 'start-date' ) %>
 	<br><br>
 	<input type="date" name="start-date" id="start-date">
 
@@ -26,7 +26,6 @@
 
 	<p>
 
-	<!-- <label for="calculate">Calculate scrutiny period end date</label> -->
 	<button type="submit" id="calculate">Calculate</button>
 	</p>	
 	</form>
