--- a/app/views/calculator/_procedure.html.erb
+++ b/app/views/calculator/_procedure.html.erb
@@ -1,4 +1,8 @@
 <p class="procedureformitem">
+
+
 <input type="radio" id="procedure-<%= procedure.id %>" name="procedure" value="<%= procedure.id %>">
-<%= content_tag( 'label', procedure.name, :for => "procedure-#{procedure.id}" ) %>
+<label for="<%= "procedure-#{procedure.id}" %>"><%= procedure.name %></label>
+
+
 </p>
