--- a/app/views/calculator/calculate.json.erb
+++ b/app/views/calculator/calculate.json.erb
@@ -5,6 +5,7 @@
 	"anticipated_scrutiny_start_date": "<%= @scrutiny_start_date.strftime( '%Y-%m-%d' ) %>",
 	"anticipated_scrutiny_end_date": "<%= @scrutiny_end_date.strftime( '%Y-%m-%d' ) %>",
 	"procedure": "<%= @procedure.name %>",
+	"procedure_id": "<%= @procedure.id %>",
 	"day_count": "<%= @day_count %>",
 	"start_date": "<%= @start_date.strftime( '%Y-%m-%d' ) %>"<% end -%>
 }
