--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -10,23 +10,26 @@
 
 	</fieldset>
 
-	<p>
-	<%= content_tag( 'label', 'Scrutiny start date: DD-MM-YYYY', :for => 'start-date' ) %>
-	<br><br>
-	<input type="date" name="start-date" id="start-date">
+<p>
+	<label>
+	Scrutiny start date: DD-MM-YYYY
+	<br>
+	<input type="date" name="start-date" id="start-date" required>
 
-	</p>
+	</label>
+</p>
+
+<p>
+	<label>
+	Number of days to count
+	<br>
+	<input type="number" name="day-count" id="day-count" required>
+	</label>
+
+</p>
+
+	<button type="submit" id="calculate">Calculate number of days</button>
 
 
-	<p>
-	<%= content_tag( 'label', 'Number of days to count', :for => 'day-count' ) %>
-	<br><br>
-	<input type="number" name="day-count" id="day-count">
-	</p>
-
-	<p>
-
-	<button type="submit" id="calculate">Calculate</button>
-	</p>	
 	</form>
 <% end -%>
