--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,19 +13,23 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">   
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.min.css">
             <style>
-			button {border:1pt solid #0076d1;}
-			p.procedureformitem {padding:0.5rem;margin:0.5rem;}
-			p.procedureformitem:hover {background-color: pink;}
-			ol.no-bullets { list-style-type: none; padding:0;}
-			main {padding:2rem 0;}
-			p.procedureformitem input[type="radio"]:checked+label {
-  font-weight: bold;
-}
+            *, *:before, *:after {box-sizing: border-box;}
+            body {font-family: "Helvetica Neue","Helvetica",sans-serif;max-width:42rem;padding:1rem;font-size:1.1rem;line-height: 1.4;margin:auto;}
+            main {margin:4rem 0;}
+            h1 {font-size:1.3rem;}
+            a {text-decoration: none;}
+            a:hover {text-decoration: underline;}
+            label.radio {padding:0.25rem 0.5rem;border-radius:0.25rem;}
+            label.radio:hover {background-color: pink;}
+            input[type=date] {padding: 0.5rem;border-radius:0.25rem;font-size:larger;}
+            input[type=number] {padding: 0.5rem;border-radius:0.25rem;font-size:larger;}
+            input:focus {border-color: blue;transform: scale(1);}
+            button {width:50%;padding: 0.5rem;border-radius:0.25rem;font-size:larger;color:black;background-color: white;border:2pt solid black;}
+            button:hover {border:2pt solid blue;}
             </style>
 </head>
-<body class="<%= Rails.env %>">
+<body>
 <header>
 <nav>
 <p>
