--- a/app/views/calendar/month.html.erb
+++ b/app/views/calendar/month.html.erb
@@ -8,7 +8,7 @@
 <table>
 	<thead>
 		<tr>
-			<th style="float:right;">Date</th>
+			<th>Date</th>
 			<th>Day</th>
 			<th>Commons day type</th>
 			<th>Commons praying</th>
