--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <meta name="theme-color" content="#ffffff">   
             <style>
             *, *:before, *:after {box-sizing: border-box;}
-            body {font-family: "Helvetica Neue","Helvetica",sans-serif;max-width:42rem;padding:1rem;font-size:1.1rem;line-height: 1.4;margin:auto;}
+            body {font-family: "Helvetica Neue","Helvetica",sans-serif;max-width:44rem;padding:1rem;font-size:1.1rem;line-height: 1.4;margin:auto;}
             main {margin:4rem 0;}
             h1 {font-size:1.3rem;}
             a {text-decoration: none;}
@@ -24,9 +24,26 @@
             label.radio:hover {background-color: pink;}
             input[type=date] {padding: 0.5rem;border-radius:0.25rem;font-size:larger;}
             input[type=number] {padding: 0.5rem;border-radius:0.25rem;font-size:larger;}
-            input:focus {border-color: blue;transform: scale(1);}
-            button {width:50%;padding: 0.5rem;border-radius:0.25rem;font-size:larger;color:black;background-color: white;border:2pt solid black;}
+            input:focus {border-color: blue;}
+            button {width:40%;padding: 0.5rem;border-radius:0.25rem;font-size:larger;color:black;background-color: white;border:2pt solid black;}
             button:hover {border:2pt solid blue;}
+            p.box {padding: 0.75rem;border-radius:0.25rem;font-size:larger;color:black;background-color: white;border:2pt solid gray;}
+            td, th {
+  padding: 0.5rem;
+    text-align: left;
+  height: 4rem;
+  vertical-align: bottom;
+}
+tr {border-bottom: thin dotted black;}
+th {
+  color: gray;
+  border-color: white;
+}
+table {
+font-size: 1rem;
+  border-collapse: collapse;
+  width:100%;
+}
             </style>
 </head>
 <body>
