--- a/app/views/calendar/_date.html.erb
+++ b/app/views/calendar/_date.html.erb
@@ -1,6 +1,6 @@
 <tr>
 	<td><%= date.strftime('%A')  %></td>
-	<td><%= date.strftime('%e').strip.to_i.ordinalize  %></td>
+	<td name="<%= date.strftime('%e').strip.to_i  %>"><%= date.strftime('%e').strip.to_i.ordinalize  %></td>
 	<td title="Commons day type"><%= date.commons_day_type  %></td>
 	<td title="Commons praying"><%= date.is_commons_scrutiny_day_label  %></td>
 	<td title="Lords day type"><%= date.lords_day_type  %></td>
