less text on submit button

--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -28,7 +28,7 @@
 
 </p>
 
-	<button type="submit" id="calculate">Calculate number of days</button>
+	<button type="submit" id="calculate">Calculate</button>
 
 
 	</form>
