style changes to calendar table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,8 @@ font-size: 1rem;
   border-collapse: collapse;
   width:100%;
 }
+td.commons {font-weight:bold;background-color:lightgreen;}
+td.lords {font-weight:bold;background-color:pink;}
             </style>
 </head>
 <body>
