added contact us to idms mailbox

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,6 +74,8 @@ td.lords {font-weight:bold;background-color:pink;}
 <%= link_to( 'Calendar', calendar_list_url )  %>
 &middot;
 <%= link_to( 'About this application', meta_list_url )  %>
+&middot;
+<%= link_to( 'Contact us', "mailto:RIIDMSMailbox@parliament.uk" )  %>
 </p>
 
 </nav>
