--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,6 +79,7 @@ td.lords {font-weight:bold;background-color:pink;}
 </p>
 
 </nav>
+<p>Made available under an <%= link_to( 'Open Parliament Licence', 'https://www.parliament.uk/site-information/copyright-parliament/open-parliament-licence/' ) %>
 </footer>
 
 
