--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -1,5 +1,7 @@
 <ul>
 
+<li><%= link_to( 'Using the application', meta_using_url ) %></li>
+
 <li><%= link_to( 'How the calendar uses the information you create', meta_calendar_sync_url ) %></li>
 
 <li><%= link_to( 'What to do at prorogation and dissolution', meta_prorogation_dissolution_url ) %></li>
