added email links to slsc

--- a/app/views/meta/using.html.erb
+++ b/app/views/meta/using.html.erb
@@ -1,8 +1,8 @@
 <%= content_tag( 'h2', 'Legislative Reform Order scrutiny period' ) %>
-<%= content_tag( 'p', "Use date of laying, 40 days for negative or affirmative, 60 for super affirmative, check with #{link_to( 'SLSC', 'https://committees.parliament.uk/committee/255/secondary-legislation-scrutiny-committee/' )} team if in doubt.".html_safe ) %>
+<%= content_tag( 'p', "Use date of laying, 40 days for negative or affirmative, 60 for super affirmative, #{link_to( 'contact the SLSC', 'mailto:hlseclegscrutiny@parliament.uk' )} team if in doubt.".html_safe ) %>
  
 <%= content_tag( 'h2', 'Localism Order scrutiny period' ) %>
-<%= content_tag( 'p', "Use date of laying, 40 days for negative or affirmative, 60 for super affirmative, check with #{link_to( 'SLSC', 'https://committees.parliament.uk/committee/255/secondary-legislation-scrutiny-committee/' )} team if in doubt.".html_safe ) %>
+<%= content_tag( 'p', "Use date of laying, 40 days for negative or affirmative, 60 for super affirmative, #{link_to( 'contact the SLSC', 'mailto:hlseclegscrutiny@parliament.uk' )} team if in doubt.".html_safe ) %>
 
 <%= content_tag( 'h2', 'Proposed Negative Statutory Instrument committee sifting period' ) %>
 <%= content_tag( 'p', 'Use date of laying as start date with 10 days to count.' ) %>
