changed label in date to start date, not scrutiny start date

--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -12,7 +12,7 @@
 
 <p>
 	<label>
-	Scrutiny start date: DD-MM-YYYY
+	Start date: DD-MM-YYYY
 	<br>
 	<input type="date" name="start-date" id="start-date" required>
 
