--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,4 @@
+<%= content_tag( 'p', "You should not rely on this service as legal or professional advice, or as a substitute for it. We do not accept any liability whatsoever for any errors, omissions or misstatements contained herein. You should consult a suitably qualified professional if you require specific advice or information. Read the House of Commons Library briefing for #{link_to( 'information about sources of legal advice and help', 'https://commonslibrary.parliament.uk/legal-help/' )}.".html_safe, :class => 'disclaimer' ) %>
+
+
 <%= render "calculator/form" %>
