--- a/app/views/meta/prorogation_and_dissolution.html.erb
+++ b/app/views/meta/prorogation_and_dissolution.html.erb
@@ -30,8 +30,9 @@
 	<%= content_tag( 'li', "Click on 'Heroku Scheduler'." ) %>
 	<%= content_tag( 'li', "Click on the cross with tooltip 'Delete this job'. This will stop the application importing updates from the Google calendars until we've finished." ) %>
 	<%= content_tag( 'li', "Open your terminal and navigate to the application directory." ) %>
-	<%= content_tag( 'li', "Pull the database from Heroku by running #{content_tag( 'code', 'heroku pg:pull' )}. This will give you an up to date copy of the database on your machine.".html_safe ) %>
-	<%= content_tag( 'li', "In your terminal, run #{content_tag( 'code', 'psql parliament-calendar' )} to open the database.".html_safe ) %>
+	<%= content_tag( 'li', "Pull the database from Heroku by running #{content_tag( 'code', 'heroku pg:pull DATABASE_URL parliament_calendar' )}. This will give you an up to date copy of the database on your machine.".html_safe ) %>
+	<%= content_tag( 'li', "In your terminal, run #{content_tag( 'code', 'psql parliament_calendar' )} to open the database.".html_safe ) %>
+	<%= content_tag( 'li', "The database dump is taken as a backup in case things go wrong. It is not used for the rest of this task." ) %>
 </ol>
 
 <%= content_tag( 'h2', 'What to do upon the announcement of prorogation' ) %>
@@ -42,17 +43,31 @@
 
 <%= content_tag( 'p', "A prorogation may immediately precede a dissolution. For the purposes of this calendar, the prorogation period ends on the day of dissolution as named in the dissolution proclamation." ) %>
 
-<%= content_tag( 'p', "In order for the application to continue to function, we need to make changes to the database." ) %>
+<%= content_tag( 'p', "In order for the application to continue to function, we need to upload a clean copy of the database with an end date for the current session and a start date for the subsequent session." ) %>
 
 <%= content_tag( 'p', "The steps are:" ) %>
-
 <ol>
-	<%= content_tag( 'li', "Find the current session. We do this by running #{content_tag( 'code', 'select * from sessions where end_date is null;' )}.".html_safe ) %>
-	<%= content_tag( 'li', "Add an end date to the current session. We do this by running #{content_tag( 'code', "update sessions set end_date='DATE' where id = ID;" )} where DATE is the date of prorogation in YYYY-MM-DD format and ID is the ID of current session.".html_safe ) %>
-	<%= content_tag( 'li', "Find the ID of the current parliament. We do this by running #{content_tag( 'code', 'select * from parliament_periods order by start_date desc limit 1;')}.".html_safe ) %><%= content_tag( 'li', "Create the new prorogation. We do this by running #{content_tag( 'code', "insert into prorogation_periods (number, start_date, end_date, parliament_period_id) values (NUMBER, 'START_DATE', 'END_DATE', PARLIAMENT_ID);" )} where NUMBER is the number of the session in the parliament, START_DATE is the day following the prorogation date, END_DATE is either the day before the start date of the next session if the prorogation is followed by a session or the date of dissolution if the prorogation is followed by dissolution and PARLIAMENT_ID is the ID returned from the previous query.".html_safe ) %>
-	<%= content_tag( 'li', "Run a rake task to populate prorogation days from the prorogation period. Note that this script does not exist yet and will need to be written when the next prorogation is announced." ) %>
-	<%= content_tag( 'li', "Run a rake task to populate prorogation days from the prorogation period. Note that this script does not exist yet and will need to be written when the next prorogation is announced." ) %>
+	<%= content_tag( 'li', "On the command line, navigate to the #{content_tag( 'code', 'parliament-calendar' )} application.".html_safe ) %>
+	<%= content_tag( 'li', "Open #{content_tag( 'code', 'db/data/sessions.csv' )}.".html_safe ) %>
+	<%= content_tag( 'li', "Add the end date of the current session to the first row.".html_safe ) %>
+	<%= content_tag( 'li', "Add a new row before the first row of the CSV containing: the number of the current Parliament period, the number of the session in that Parliament and the start date of the session.".html_safe ) %>
+	<%= content_tag( 'li', "Run #{content_tag( 'code', 'psql parliament_calendar < db/schema/setup.sql' )}.".html_safe ) %>
+	<%= content_tag( 'li', "Run #{content_tag( 'code', 'rake setup' )}.".html_safe ) %>
+	<%= content_tag( 'li', "Run #{content_tag( 'code', 'heroku maintenance:on' )} to switch the application to maintenance mode.".html_safe ) %>
+	<%= content_tag( 'li', "Run #{content_tag( 'code', 'heroku pg:reset --confirm parliament-calendar' )} to reset the database: this removes information from the database.".html_safe ) %>
+	<%= content_tag( 'li', "Run #{content_tag( 'code', 'heroku pg:push parliament_calendar DATABASE_URL' )} to push the new data to the database on Heroku.".html_safe ) %>
+	<%= content_tag( 'li', "From 'Heroku Scheduler', click 'Create job'." ) %>
+	<%= content_tag( 'li', "Enter the command #{content_tag( 'code', 'rake sync' )} in the 'Run Command' box.".html_safe ) %>
+	<%= content_tag( 'li', "Wait until the scheduler job runs.." ) %>
+	<%= content_tag( 'li', "Run #{content_tag( 'code', 'heroku maintenance:off' )} to switch the application out of maintenance mode.".html_safe ) %>
 </ol>
+
+
+
+
+
+
+
 
 <%= content_tag( 'h2', 'What to do upon the announcement of dissolution' ) %>
 
@@ -68,35 +83,8 @@
 	<%= content_tag( 'li', "Run a rake task to populate dissolution days from the dissolution period. Note that this script does not exist yet and will need to be written when the next dissolution is announced." ) %>
 </ol>
 
-<%= content_tag( 'h2', 'Reassign sitting and adjournment days to the correct session' ) %>
-<%= content_tag( 'p', "Sitting and adjournment days for today or in the future are assigned to the current session. This is because we do not know in advance the end date of the current session. On the announcement of a prorogation or dissolution, some some future days will need to be assigned to the following session." ) %>
-<%= content_tag( 'p', "Run a rake task to reassign sitting and adjournment days to the correct session. Note that this script does not exist yet and will need to be written when the next prorogation or dissolution is announced." ) %>
 
-<%= content_tag( 'h2', 'Pushing the data to Heroku' ) %>
 
-<%= content_tag( 'p', "Having followed the appropriate steps above, the database on your machine will be ready to push to Heroku." ) %>
 
-<%= content_tag( 'p', "The steps are:" ) %>
-
-<ol>
-	<%= content_tag( 'li', "We need to make sure the database on Heroku is empty before we push our local copy. To do this run #{content_tag( 'code', 'heroku pg:reset')}.".html_safe ) %>
-	<%= content_tag( 'li', "This will prompt for a password which is the name of the application: 'parliament-calendar'." ) %>
-	<%= content_tag( 'li', "We need to push our local database to Heroku. To do this run #{content_tag( 'code', 'heroku pg:push parliament_calendar DATABASE_URL')}.".html_safe ) %>
-</ol>
-
-<%= content_tag( 'h2', 'Restarting the syncing script' ) %>
-
-<%= content_tag( 'p', "Once the edited data has been pushed to Heroku, we need to reinstate the script that syncs data from our Google calendars to the application." ) %>
-
-<%= content_tag( 'p', "The steps are:" ) %>
-
-<ol>
-	<%= content_tag( 'li', 'Sign into Heroku.' ) %>
-	<%= content_tag( 'li', 'Find and navigate to the application (parliament-calendar).' ) %>
-	<%= content_tag( 'li', "Navigate to the 'resources' tab." ) %>
-	<%= content_tag( 'li', "Click on 'Heroku Scheduler'." ) %>
-	<%= content_tag( 'li', "Click on 'Add job'." ) %>
-	<%= content_tag( 'li', "Add a job to run 'rake sync' every 10 minutes and click 'Save'." ) %>
-</ol>
 
 
